Commit from TeleportHQ

--- a/certification-page.html
+++ b/certification-page.html
@@ -73,7 +73,7 @@
         ><div class="certification-page-container2"
           ><img
             alt="image"
-            src="public/external/screenshot%20from%202024-04-24%2001-59-41-1500w.png"
+            src="public/external/e5968226-e43b-42bb-a365-bcd60cdf8e1d-1-1500w.jpg"
             class="certification-page-image" /></div
         ><footer class="footerContainer certification-page-footer"
           ><div class="certification-page-separator"></div
