--- a/certification-page.html
+++ b/certification-page.html
@@ -1,93 +1,173 @@
 <!DOCTYPE html>
 <html lang="en"
-  ><head
-    ><title>certification-page - Glorious Fast Chimpanzee</title
-    ><meta
-      property="og:title"
-      content="certification-page - Glorious Fast Chimpanzee"
-    /><meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    /><meta charset="utf-8" /><meta
-      property="twitter:card"
-      content="summary_large_image"
-    /><style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }</style
-    ><style data-tag="default-style-sheet">
-      html {
-        font-family: Inter;
-        font-size: 16px;
+><head
+><title>certification-page - Glorious Fast Chimpanzee</title
+><meta
+        property="og:title"
+        content="certification-page - Glorious Fast Chimpanzee"
+/><meta
+        name="viewport"
+        content="width=device-width, initial-scale=1.0"
+/><meta charset="utf-8" /><meta
+        property="twitter:card"
+        content="summary_large_image"
+/><style data-tag="reset-style-sheet">
+  html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }</style
+><style data-tag="default-style-sheet">
+  html {
+    font-family: Inter;
+    font-size: 16px;
+  }
+
+  body {
+    font-weight: 400;
+    font-style:normal;
+    text-decoration: none;
+    text-transform: none;
+    letter-spacing: normal;
+    line-height: 1.15;
+    color: var(--dl-color-gray-black);
+    background-color: var(--dl-color-gray-white);
+
+  }</style
+><link
+        rel="stylesheet"
+        href="https://unpkg.com/animate.css@4.1.1/animate.css"
+/><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+        data-tag="font"
+/><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;display=swap"
+        data-tag="font"
+/><link
+        rel="stylesheet"
+        href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
+/><style>
+  @keyframes fade-in-left {
+    0% {
+      opacity: 0;
+      transform: translateX(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  .certification-page-container1 {
+    color: red !important;
+    display: none;
+    background-color: rgb(251, 249, 239) !important;
+    text-align: center;
+    padding: 0 50px;
+  }
+  .certification-page-container2 {
+    color: green;
+    display: none;
+    background-color: rgb(251, 249, 239)!important;
+    text-align: center;
+    padding: 50px 50px;
+  }
+  .error-text {
+    color: red !important;
+  }
+
+</style>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Function to get query string parameter by name
+      function getParameterByName(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+                results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
       }
 
-      body {
-        font-weight: 400;
-        font-style:normal;
-        text-decoration: none;
-        text-transform: none;
-        letter-spacing: normal;
-        line-height: 1.15;
-        color: var(--dl-color-gray-black);
-        background-color: var(--dl-color-gray-white);
+      // Get the value of the 'certification' query string parameter
+      var certificationName = getParameterByName('certification');
 
-      }</style
-    ><link
-      rel="stylesheet"
-      href="https://unpkg.com/animate.css@4.1.1/animate.css"
-    /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font"
-    /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;display=swap"
-      data-tag="font"
-    /><link
-      rel="stylesheet"
-      href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
-    /><style>
-      @keyframes fade-in-left {
-        0% {
-          opacity: 0;
-          transform: translateX(-20px);
-        }
-        100% {
-          opacity: 1;
-          transform: translateX(0);
-        }
+      // If 'certification' parameter is present and matches an image, display the success message and image
+      if (certificationName && certificationName !== "") {
+        var img = new Image();
+        img.onload = function() {
+          // Hide error message
+          var errorMessage = document.querySelector('.certification-page-container1');
+          errorMessage.style.display = "none";
+
+          // Show success message
+          var successMessage = document.querySelector('.certification-page-container2');
+          successMessage.style.display = "block";
+
+          // Show the image
+          var imageContainer = document.getElementById('image-container');
+          var imageElement = document.createElement('img');
+          imageElement.src = "public/external/" + certificationName;
+          imageElement.classList.add('certification-page-image');
+          imageContainer.appendChild(imageElement);
+        };
+        img.onerror = function() {
+          // Show error message
+          var errorMessage = document.querySelector('.certification-page-container1');
+          errorMessage.style.display = "block";
+
+          // Hide success message
+          var successMessage = document.querySelector('.certification-page-container2');
+          successMessage.style.display = "none";
+        };
+        img.src = "public/external/" + certificationName;
+      } else {
+        // If no certification parameter or it doesn't match an image, hide the certification page containers
+        var errorMessage = document.querySelector('.certification-page-container1');
+        errorMessage.style.display = "none";
+
+        var successMessage = document.querySelector('.certification-page-container2');
+        successMessage.style.display = "none";
       }
-    </style></head
-  ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./certification-page.css" rel="stylesheet" /><div
+    });
+  </script>
+</head
+><body
+><link rel="stylesheet" href="./style.css" /><div
+><link href="./certification-page.css" rel="stylesheet" /><div
         class="certification-page-container"
-        ><header
-          data-thq="thq-navbar"
-          class="certification-page-navbar-interactive navbarContainer"
-          ><span class="certification-page-logo logo"
-            >ESA Certificate Online</span
-          ></header
-        ><div class="certification-page-container1"
-          ><h1 class="certification-page-text"
-            >This Certificate Is Valid</h1
-          ></div
-        ><div class="certification-page-container2"
-          ><img
-            alt="image"
-            src="public/external/e5968226-e43b-42bb-a365-bcd60cdf8e1d-1-1500w.jpg"
-            class="certification-page-image" /></div
-        ><footer class="footerContainer certification-page-footer"
-          ><div class="certification-page-separator"></div
-          ><div class="certification-page-container3"
-            ><span class="certification-page-text1"
-              ><span class="bodySmall">© 2024 </span
-              ><span>esacertificate.online</span
-              ><span class="bodySmall">, All Rights Reserved.</span></span
-            ><div
-              class="certification-page-icon-group"
-            ></div></div></footer></div
-    ></div>
-    <script
-      data-section-id="navbar"
-      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
-    ></script></body
+><header
+        data-thq="thq-navbar"
+        class="certification-page-navbar-interactive navbarContainer"
+><span class="certification-page-logo logo"
+>ESA Certificate Online</span
+></header
+>
+  <div class="certification-page-container1">
+    <!-- Contents of the certification page -->
+    <h1 class="certification-page-text error-text">
+    The certificate is invalid. Please try again.
+    </h1>
+  </div>
+  <div class="certification-page-container2">
+    <h1 class="certification-page-text">
+      This Certificate Is Valid
+    </h1>
+  </div>
+  <div id="image-container"
+></div
+><footer class="footerContainer certification-page-footer"
+><div class="certification-page-separator"></div
+><div class="certification-page-container3"
+><span class="certification-page-text1"
+><span class="bodySmall">© 2024 </span
+><span>esacertificate.online</span
+><span class="bodySmall">, All Rights Reserved.</span></span
+><div
+        class="certification-page-icon-group"
+></div></div></footer></div
+></div>
+<script
+        data-section-id="navbar"
+        src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+></script>
+</body
 ></html>
